<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kmourad.calculatrice.NormalFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/buttonCE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="E"
            android:text="CE" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="C"
            android:text="C" />

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="D"
            android:text="«" />

        <Button
            android:id="@+id/buttonDivise"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="/"
            android:text="/" />

    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="7"
            android:text="7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="8"
            android:text="8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="9"
            android:text="9" />

        <Button
            android:id="@+id/buttonMultiplie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="*"
            android:text="X" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="4"
            android:text="4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="5"
            android:text="5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="6"
            android:text="6" />

        <Button
            android:id="@+id/buttonMoins"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="-"
            android:text="-" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="1"
            android:text="1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="2"
            android:text="2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="3"
            android:text="3" />

        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="+"
            android:text="+" />
    </LinearLayout>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="0"
            android:text="0" />

        <Button
            android:id="@+id/buttonVirgule"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag=","
            android:text="," />

        <Button
            android:id="@+id/buttonEgale"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:onClick="onButtonClicked"
            android:textSize="@dimen/btn_text_size"
            android:tag="="
            android:text="=" />
    </LinearLayout>

</LinearLayout>
