<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kmourad.calculatrice.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/EditText01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="3dp"
            android:layout_marginTop="2dp"
            android:layout_weight="4"
            android:background="@android:color/black"
            android:gravity="center_vertical|right"
            android:paddingBottom="4dp"
            android:paddingRight="4dp"
            android:paddingTop="2dp"
            android:text="0"
            android:textColor="@android:color/white"
            android:textSize="@dimen/show_text_size"
            android:textStyle="normal" />
    </LinearLayout>

    <fragment
        android:id="@+id/fragment_normal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:name="com.kmourad.calculatrice.NormalFragment"
        />

</LinearLayout>
